# MiniHome

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MHApp/: CMakeLists.txt  main.cpp
MHCore/: CMakeLists.txt
MHCore/include/: MHActor.h  MHEntity.h  MHEntityManager.h  MHInteractorFilter.h  MHInteractorStyle.h  MHLineEntity.h  MHMainVTKInteractorStyle.h  MHMainVTKRenderWindow.h  MHRenderer.h  MHRendererManager.h  MHVertexEntity.h
MHCore/src/: MHActor.cpp  MHEntity.cpp  MHEntityManager.cpp  MHInteractorFilter.cpp  MHInteractorStyle.cpp  MHLineEntity.cpp  MHMainVTKInteractorStyle.cpp  MHMainVTKRenderWindow.cpp  MHRenderer.cpp  MHRendererManager.cpp  MHVertexEntity.cpp
MHGeometry/: CMakeLists.txt
MHGeometry/include/: MHArcEdge.h  MHArcEdge.hpp  MHEdge.h  MHEdge.hpp  MHEdgeToolKit.h  MHFace.h  MHFaceToolKit.h  MHLineEdge.h  MHLineEdge.hpp  MHPlaneFace.h  MHPoint.h  MHVertex.h  MHVertex.hpp  MHVertexToolKit.h  MHWire.h  MHWire.hpp  MHWireToolKit.h
MHGeometry/src/: MHArcEdge.cpp  MHEdgeToolKit.cpp  MHFaceToolKit.cpp  MHLineEdge.cpp  MHPlaneFace.cpp  MHPoint.cpp  MHVertex.cpp  MHVertexToolKit.cpp  MHWire.cpp  MHWireToolKit.cpp
MHHouse/: CMakeLists.txt
MHHouse/include/draw/: MHDrawBase.h  MHDrawCylinder.h  MHDrawHole.h  MHDrawHouseManager.h  MHDrawManager.h  MHDrawPillar.h  MHDrawWallArc.h  MHDrawWallLine.h  MHDrawWallManager.h  MHDrawWallRectangle.h
MHHouse/include/entities/: MHCylinderEntity.h  MHHoleEntity.h  MHHouseEntity.h  MHPillarEntity.h  MHSpaceEntity.h  MHWallEntity.h
MHHouse/include/manager/: MHCylinderManager.h  MHHoleManager.h  MHPillarManager.h  MHSpaceManager.h  MHWallManager.h
MHHouse/src/draw/: MHDrawCylinder.cpp  MHDrawHole.cpp  MHDrawHouseManager.cpp  MHDrawManager.cpp  MHDrawPillar.cpp  MHDrawWallArc.cpp  MHDrawWallLine.cpp  MHDrawWallManager.cpp  MHDrawWallRectangle.cpp  MHPillarEntity.cpp
MHHouse/src/entities/: MHCylinderEntity.cpp  MHHoleEntity.cpp  MHHouseEntity.cpp  MHPillarEntity.cpp  MHSpaceEntity.cpp  MHWallEntity.cpp
MHHouse/src/manager/: MHCylinderManager.cpp  MHHoleManager.cpp  MHPillarManager.cpp  MHSpaceManager.cpp  MHWallManager.cpp
MHWindow/: CMakeLists.txt
MHWindow/include/: MHLeftNavigation.h  MHLeftNavigationHouse.h  MHLeftNavigationOrnament.h  MHMainVTKRenderWindow.h  MHMainVTKWindow.h  MHMainWindow.h  MHMainWindowStatusBar.h  MHRightNavigation.h  MHRightNavigationDrawWall.h  MHRightNavigationSpace.h  MHTopNavigation.h  MHVtkWindow.h
MHWindow/src/: MHLeftNavigation.cpp  MHLeftNavigationHouse.cpp  MHLeftNavigationOrnament.cpp  MHMainVTKRenderWindow.cpp  MHMainVTKWindow.cpp  MHMainWindow.cpp  MHMainWindowStatusBar.cpp  MHRightNavigation.cpp  MHRightNavigationDrawWall.cpp  MHRightNavigationSpace.cpp  MHTopNavigation.cpp  MHVtkWindow.cpp
MHWindow/ui/: MHLeftNavigation.ui  MHLeftNavigationHouse.ui  MHLeftNavigationOrnament.ui  MHMainWindow.ui  MHRightNavigation.ui  MHRightNavigationDrawWall.ui  MHRightNavigationSpace.ui  MHTopNavigation.ui
resources/styles/: MHLeftNavigation.qss
