cmake_minimum_required(VERSION 3.15)
project(MHGeometry LANGUAGES CXX VERSION 0.1)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(/EHsc)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_FLAGS /utf-8)

if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}/lib)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}/lib)
endif()

add_definitions(-DMH_GEOMETRY_EXPORTS)

set(VTK_DIR ${MINIHOME_VTK_DIR})
find_package(VTK REQUIRED COMPONENTS
    CommonCore
)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(OpenCASCADE_DIR ${MINIHOME_OCCT_DEBUG_DIR})
else()
    set(OpenCASCADE_DIR ${MINIHOME_OCCT_RELEASE_DIR})
endif()
find_package(OpenCASCADE REQUIRED)

file(GLOB_RECURSE SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE HEADER_SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")

add_library(${PROJECT_NAME} SHARED 
    ${SRCS}
    ${HEADER_SRCS}
)

target_include_directories(
    ${PROJECT_NAME} PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(${PROJECT_NAME} PUBLIC 
    ${VTK_LIBRARIES}
    ${OpenCASCADE_LIBRARIES}
)